Update GAS_API_URL to the correct deployment URL

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		// --- 設定 ---
 		const LIFF_ID = "2008839253-KLrT6Xkx";
 		// GASのデプロイURL(/exec)をここに貼り付けてください
-		const GAS_API_URL = "ここにGASのデプロイURL(/exec)を貼り付けてください";
+		const GAS_API_URL = "https://script.google.com/macros/s/AKfycbx6m2_NMDW3_S3oi7p2KcPtpT5u9_D3UlnR98HYk-iqUTcYvEz5iJHW_5aWSkSXfrom/exec";
 
 		let lineUserId = '';
 
