Change title from '檀家情報登録' to '霊園利用者登録'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<base target="_top">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>檀家情報登録</title>
+	<title>霊園利用者登録</title>
 	<style>
 		body {
 			font-family: 'Helvetica Neue', Arial, sans-serif;
