Change header from 檀家情報登録 to 霊園利用者登録

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 <body>
 	<div class="card">
-		<h1>檀家情報登録</h1>
+		<h1>霊園利用者登録</h1>
 
 		<div id="registration-content">
 			<button class="btn btn-scan" onclick="handleScan()">QRコードを読み取る</button>
