Refactor meta tags in index.html
Updated meta tags for Open Graph and changed image URL.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-	<base target="_top">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="霊園利用者登録 - 林泉寺">
-	<meta property="og:description" content="林泉寺DXシステム: 霊園利用者のLINE連携登録を行います。">
-	<meta property="og:image" content="https://rinsenji-dx-client.netlify.app/image/oqp.png">
+	<base target="_top" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta property="og:title" content="霊園利用者登録 - 林泉寺" />
+	<meta property="og:description" content="林泉寺DXシステム: 霊園利用者のLINE連携登録を行います。" />
+	<!-- <meta property="og:image" content="https://rinsenji-dx-client.netlify.app/image/oqp.png" /> -->
+	<meta property="og:image" content="https://github.com/aotatonet-source/test01/blob/main/image/ogp.png" />
 	<!-- Note: Assuming hosted path or needing replacement -->
 	<title>霊園利用者登録</title>
 	<style>
