Update labels and placeholders in index.html

--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
 
 				<div style="display:flex; gap:10px;">
 					<div class="form-group" style="flex:1;">
-						<label>ｶﾅ (全角)</label>
-						<input type="text" id="inquiryKana" placeholder="サトウ　タロウ">
+						<label>ｶﾅ(半角)</label>
+						<input type="text" id="inquiryKana" placeholder="ｻﾄｳﾀﾛｳ">
 					</div>
 					<div class="form-group" style="flex:1;">
-						<label>電話番号</label>
-						<input type="tel" id="inquiryTel" placeholder="090-1234-5678">
+						<label>電話番号(ハイフン無し)</label>
+						<input type="tel" id="inquiryTel" placeholder="">
 					</div>
 				</div>
 
