--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 						<input type="text" id="inquiryKana" placeholder="ｻﾄｳﾀﾛｳ">
 					</div>
 					<div class="form-group" style="flex:1;">
-						<label>電話番号(ハイフン無し)</label>
-						<input type="tel" id="inquiryTel" placeholder="">
+						<label>電話番号</label>
+						<input type="tel" id="inquiryTel" placeholder="ハイフン無し">
 					</div>
 				</div>
 
