Update Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta property="og:title" content="霊園利用者登録 - 林泉寺" />
 	<meta property="og:description" content="林泉寺DXシステム: 霊園利用者のLINE連携登録を行います。" />
 	<!-- <meta property="og:image" content="https://rinsenji-dx-client.netlify.app/image/oqp.png" /> -->
-	<meta property="og:image" content="https://github.com/aotatonet-source/test01/blob/main/image/ogp.png" />
+	<meta property="og:image" content="https://aotatonet-source.github.io/test01/image/ogp.png" />
 	<!-- Note: Assuming hosted path or needing replacement -->
 	<title>霊園利用者登録</title>
 	<style>
